# ZhenXia_Bot

./: .env.dev  .env.prod  .gitignore  README.md  bot.py  pyproject.toml
data/: ZiYue.db  foods.txt  stopwords.txt
data/INDEX/: 756265655.db  872847025.db  897025345.db  939669370.db  Neargo.db  users.db
data/Neargo/: 872847025.db  939669370.db
data/learning_chat/: learning_chat.db  learning_chat.yml
src/Monopoly/: __init__.py  battle.py  event.py  models.py
src/data/INDEX/: BoF.db
src/plugins/: .www.babel.cc
src/plugins/Battle_of_fox/: .www.babel.cc  __init__.py  mapGene.py  models.py  stars.CSV
src/plugins/GPT2_chat_plugin/: .www.babel.cc  __init__.py
src/plugins/Index_user_management/: .www.babel.cc  __init__.py  models.py
src/plugins/Monopoly/: .www.babel.cc  __init__.py  battle.py  event.py  models.py
src/plugins/Neargo/: .www.babel.cc  __init__.py  battle.py  items.csv  models.py  positions.csv
src/plugins/QBTP/: .www.babel.cc  __init__.py  sample.json
src/plugins/ZiYue/: .www.babel.cc  __init__.py
src/plugins/eat_what/: .www.babel.cc  __init__.py  recipe.csv
src/plugins/hangman/: .www.babel.cc  __init__.py  model.py
src/plugins/hangman/resources/: .www.babel.cc
src/plugins/hangman/resources/fonts/: .www.babel.cc
src/plugins/hangman/resources/words/: .www.babel.cc
src/plugins/nonebot_plugin_petpet_red/: __init__.py
src/plugins/nonebot_plugin_quote/: __init__.py
src/plugins/wordle_zhenxia/: .www.babel.cc  __init__.py
src/plugins/wordle_zhenxia/resources/: .www.babel.cc
(+2 files in other folders)
